--- a/src/ujicobainventori/Frame/MainFrame.form
+++ b/src/ujicobainventori/Frame/MainFrame.form
@@ -180,6 +180,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tb_productMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -194,6 +197,9 @@
       </Events>
     </Component>
     <Component class="org.jdesktop.swingx.JXDatePicker" name="dp_expired">
+      <Events>
+        <EventHandler event="propertyChange" listener="java.beans.PropertyChangeListener" parameters="java.beans.PropertyChangeEvent" handler="dp_expiredPropertyChange"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
